tests/error/global_in_class.gw
#! [contains] at class scope only valid for function pointers
class global C {
  var global Event ev;
}
